Mojo C++ bindings: don't DCEHCK in Binding::Close() when the binding is not bound.

BUG=618488

Review-Url: https://codereview.chromium.org/2052963002
Cr-Commit-Position: refs/heads/master@{#399059}

Former-commit-id: 3e75809d6084ec6ae9694cc5ba20990be37ec49a